syntax = "proto3";

package smartoffice;

// Automated Lighting Service
service AutomatedLighting {
  rpc ControlLights(LightRequest) returns (LightResponse);
  rpc streamLightingControl (stream LightRequest) returns (LightSummaryResponse);
}

message LightRequest {
  string room_id = 1;
  string mode = 2;
  string light_level = 3;
}

message LightResponse {
  string message = 1;
  string mode = 2;        
  string light_level = 3;

 
}

message LightSummaryResponse {
  string summary = 1;
}